# rustdis

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: .rustc_info.json  .rustdoc_fingerprint.json
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/rustdis/: all.html  index.html  sidebar-items.js  type.Error.html  type.Result.html
docs/doc/rustdis/codec/: index.html  sidebar-items.js  struct.FrameCodec.html
docs/doc/rustdis/commands/: enum.Command.html  index.html  sidebar-items.js
docs/doc/rustdis/commands/append/: index.html  struct.Append.html
docs/doc/rustdis/commands/client/: index.html  struct.Client.html
docs/doc/rustdis/commands/command/: enum.Command.html  index.html  sidebar-items.js  struct.Docs.html  struct.Root.html
docs/doc/rustdis/commands/config/: index.html  struct.Config.html
docs/doc/rustdis/commands/dbsize/: index.html  sidebar-items.js  struct.DBSize.html
docs/doc/rustdis/commands/decr/: index.html  sidebar-items.js  struct.Decr.html
docs/doc/rustdis/commands/decrby/: index.html  sidebar-items.js  struct.DecrBy.html
docs/doc/rustdis/commands/del/: index.html  sidebar-items.js  struct.Del.html
docs/doc/rustdis/commands/executable/: index.html  sidebar-items.js  (+1 more)
docs/doc/rustdis/connection/: index.html  sidebar-items.js  struct.Connection.html
docs/doc/rustdis/frame/: enum.Error.html  enum.Frame.html  index.html  sidebar-items.js
docs/doc/rustdis/server/: fn.run.html  index.html
docs/doc/rustdis/store/: index.html  struct.Store.html
docs/doc/rustdis/utils/: index.html  sidebar-items.js
docs/doc/src/rustdis/: codec.rs.html  connection.rs.html  frame.rs.html  lib.rs.html  server.rs.html  store.rs.html
enum_variants/: Cargo.toml
enum_variants/src/: lib.rs
src/: codec.rs  command.rs  connection.rs  frame.rs  lib.rs  main.rs  server.rs  store.rs
src/commands/: append.rs  client.rs  command.rs  config.rs  dbsize.rs  decr.rs  decrby.rs  del.rs  executable.rs  exists.rs  get.rs  getdel.rs  getex.rs  getrange.rs  incr.rs  incrby.rs  incrbyfloat.rs  info.rs  keys.rs  lcs.rs  memory.rs  mget.rs  mod.rs  module.rs  mset.rs  msetnx.rs  object.rs  ping.rs  pttl.rs  scan.rs  select.rs  set.rs  setnx.rs  setrange.rs  strlen.rs  ttl.rs  type_.rs
src/utils/: lcs.rs  mod.rs
tests/: connection.rs  integration.rs
(+132 files in other folders)
