[package]
name = "rustdis"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "rustdis"
path = "src/bin/server.rs"


[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
glob-match = "0.2.1"
thiserror = "1.0.53"
# TODO: Use only required features.
tokio = { version = "1.35.0", features = ['full'] }
tokio-util = { version = "0.7.10", features = ["codec"] }
