[package]
name = "rustdis"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A partial Redis server implementation intended purely for educational purposes"
readme = "README.md"
authors = [
  "Christian Gill <gillchristiang@gmail.com>",
  "Nicolas del Valle <nicolas.delvalle@gmail.com>",
]

[[bin]]
name = "rustdis"
path = "src/bin/server.rs"


[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
glob-match = "0.2.1"
thiserror = "1.0.53"
# TODO: Use only required features.
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }
strum = "0.26.2"
strum_macros = "0.26.2"
clap = { version = "4.5.7", features = ["derive", "env"] }
num-traits = "0.2.19"
itertools = "0.13.0"

[dev-dependencies]
rand = "0.8.5"
redis = { version = "0.25.4", features = ["tokio-comp", "aio"] }
serial_test = "3.1.1"
tokio = { version = "1.35.0", features = ["full", "test-util"] }
